[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda-http-common.workspace = true
ark-dynamodb.workspace = true
arkproject.workspace = true
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[dev-dependencies]
mockall = "0.11.4"
ark-dynamodb = { path = "../../../ark-dynamodb", features = ["mock"] }
